--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,8 +21,7 @@ set -g history-limit 10000
 
 # y and p as in vim
 bind Escape copy-mode
-unbind p
-bind p paste-buffer
+# bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 bind -t vi-copy 'Space' halfpage-down
@@ -53,3 +52,12 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+set -g set-titles on
+set -g window-status-current-bg blue
+set -g window-status-current-fg yellow
+
+set -g default-terminal "screen-256color"
+
+set -g status-bg cyan
+set -g status-fg blue
