--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,5 +59,5 @@ set -g window-status-current-fg yellow
 
 set -g default-terminal "screen-256color"
 
-set -g status-bg cyan
+set -g status-bg "#eeeeaa"
 set -g status-fg blue
